# predictive-maintenance-dashboard

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0654e597caac_create_sensor_readings_table.py  4405a8db2abc_create_sensor_readings_table.py  faab9057362e_create_sensor_readings_table.py
backend/data/: store.py
backend/database/: connection.py  models.py
backend/models/: schemas.py
backend/routes/: machines.py  readings.py
backend/services/: ai.py
frontend/: package-lock.json  package.json
frontend/src/: main.tsx  router.tsx
frontend/src/api/: client.ts
frontend/src/types/: index.ts
simulator/: pyproject.toml  simulator.py
